feat: Added a custom authentication entry point to show 401 errors